--- a/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
+++ b/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
@@ -154,11 +154,112 @@
                     <connections>
                         <outlet property="activityIndicator" destination="I6O-wB-KNy" id="jq1-vX-KD8"/>
                         <outlet property="tableView" destination="3bC-qK-KTc" id="QRp-1g-rDj"/>
+                        <segue destination="oo8-Xj-uz2" kind="show" identifier="goToMovieDetailSegue" id="i2M-Mk-hVe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tOf-Xz-fkc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2482.608695652174" y="137.94642857142856"/>
+        </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="bdr-fr-hHd">
+            <objects>
+                <viewController id="oo8-Xj-uz2" customClass="MovieDetailViewController" customModule="LoodosMovieChallange" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ajt-XA-FTG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PAk-DD-NSI">
+                                <rect key="frame" x="0.0" y="88" width="414" height="543"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RJz-ab-nPb">
+                                <rect key="frame" x="20" y="661" width="374" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Actors" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M5y-2n-pJS">
+                                <rect key="frame" x="20" y="703" width="374" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="orE-KE-GJN">
+                                <rect key="frame" x="20" y="736.5" width="374" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="60V-2c-aOb">
+                                <rect key="frame" x="20" y="778" width="374" height="84"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IMBD Rating" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LP6-Im-oBo">
+                                        <rect key="frame" x="8" y="8" width="90.5" height="68"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Awards" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pob-0D-pbd">
+                                        <rect key="frame" x="216" y="8" width="150" height="68"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="bVg-3G-znh"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstItem="pob-0D-pbd" firstAttribute="trailing" secondItem="60V-2c-aOb" secondAttribute="trailingMargin" id="6ol-Hg-32h"/>
+                                    <constraint firstItem="LP6-Im-oBo" firstAttribute="top" secondItem="60V-2c-aOb" secondAttribute="top" constant="8" id="Jhf-6I-M0n"/>
+                                    <constraint firstItem="LP6-Im-oBo" firstAttribute="leading" secondItem="60V-2c-aOb" secondAttribute="leading" constant="8" id="KEV-2r-ESI"/>
+                                    <constraint firstItem="pob-0D-pbd" firstAttribute="baseline" secondItem="LP6-Im-oBo" secondAttribute="baseline" id="WA5-yO-M7N"/>
+                                    <constraint firstAttribute="bottom" secondItem="LP6-Im-oBo" secondAttribute="bottom" constant="8" id="Yih-MG-5T4"/>
+                                    <constraint firstItem="pob-0D-pbd" firstAttribute="firstBaseline" secondItem="LP6-Im-oBo" secondAttribute="firstBaseline" id="iUr-87-dtf"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="na7-jw-8XV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="RJz-ab-nPb" firstAttribute="top" secondItem="PAk-DD-NSI" secondAttribute="bottom" constant="30" id="EiK-ZL-arp"/>
+                            <constraint firstItem="60V-2c-aOb" firstAttribute="bottom" secondItem="na7-jw-8XV" secondAttribute="bottom" id="JVH-5J-X3H"/>
+                            <constraint firstItem="60V-2c-aOb" firstAttribute="top" secondItem="orE-KE-GJN" secondAttribute="bottom" constant="20" id="L6D-G1-Ycx"/>
+                            <constraint firstItem="PAk-DD-NSI" firstAttribute="trailing" secondItem="na7-jw-8XV" secondAttribute="trailing" id="Lzd-QS-ft1"/>
+                            <constraint firstItem="orE-KE-GJN" firstAttribute="trailing" secondItem="M5y-2n-pJS" secondAttribute="trailing" id="PWA-Ou-3nL"/>
+                            <constraint firstItem="60V-2c-aOb" firstAttribute="leading" secondItem="na7-jw-8XV" secondAttribute="leading" constant="20" id="V1F-Vm-3SW"/>
+                            <constraint firstItem="M5y-2n-pJS" firstAttribute="top" secondItem="RJz-ab-nPb" secondAttribute="bottom" constant="12" id="WuG-7J-8XU"/>
+                            <constraint firstItem="orE-KE-GJN" firstAttribute="leading" secondItem="M5y-2n-pJS" secondAttribute="leading" id="Y7P-l8-uS7"/>
+                            <constraint firstItem="PAk-DD-NSI" firstAttribute="leading" secondItem="na7-jw-8XV" secondAttribute="leading" id="dYc-hx-FVN"/>
+                            <constraint firstItem="RJz-ab-nPb" firstAttribute="leading" secondItem="na7-jw-8XV" secondAttribute="leading" constant="20" id="eiG-yo-eR9"/>
+                            <constraint firstItem="60V-2c-aOb" firstAttribute="top" secondItem="ajt-XA-FTG" secondAttribute="top" constant="778" id="jKv-2U-E84"/>
+                            <constraint firstItem="na7-jw-8XV" firstAttribute="trailing" secondItem="60V-2c-aOb" secondAttribute="trailing" constant="20" id="mYX-uK-buk"/>
+                            <constraint firstItem="orE-KE-GJN" firstAttribute="top" secondItem="M5y-2n-pJS" secondAttribute="bottom" constant="12" id="r5N-qg-Pi2"/>
+                            <constraint firstItem="PAk-DD-NSI" firstAttribute="top" secondItem="na7-jw-8XV" secondAttribute="top" id="rrK-NY-hCN"/>
+                            <constraint firstItem="M5y-2n-pJS" firstAttribute="trailing" secondItem="RJz-ab-nPb" secondAttribute="trailing" id="sTE-oQ-gPO"/>
+                            <constraint firstItem="M5y-2n-pJS" firstAttribute="leading" secondItem="RJz-ab-nPb" secondAttribute="leading" id="sYx-0a-HGU"/>
+                            <constraint firstItem="na7-jw-8XV" firstAttribute="trailing" secondItem="RJz-ab-nPb" secondAttribute="trailing" constant="20" id="uaB-tC-ra1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="yQG-G6-eR5"/>
+                    <connections>
+                        <outlet property="awardLabel" destination="pob-0D-pbd" id="IvF-3J-9Mx"/>
+                        <outlet property="imdbRatingLabel" destination="LP6-Im-oBo" id="NRb-8Y-si2"/>
+                        <outlet property="movieActorsLabel" destination="M5y-2n-pJS" id="1Im-5n-akd"/>
+                        <outlet property="movieDescriptionLabel" destination="orE-KE-GJN" id="0Ov-uW-y6t"/>
+                        <outlet property="movieTitleLabel" destination="RJz-ab-nPb" id="5tC-5M-fVR"/>
+                        <outlet property="posterImageView" destination="PAk-DD-NSI" id="wc1-ru-Omp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fAz-ao-g6o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3173.913043478261" y="137.94642857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TxU-fq-894">
@@ -186,6 +287,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
