--- a/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
+++ b/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
@@ -170,7 +170,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PAk-DD-NSI">
-                                <rect key="frame" x="0.0" y="88" width="414" height="543"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="LBu-wJ-x2j"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RJz-ab-nPb">
                                 <rect key="frame" x="20" y="661" width="374" height="30"/>
@@ -228,22 +231,21 @@
                         <viewLayoutGuide key="safeArea" id="na7-jw-8XV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="RJz-ab-nPb" firstAttribute="top" secondItem="PAk-DD-NSI" secondAttribute="bottom" constant="30" id="EiK-ZL-arp"/>
+                            <constraint firstItem="PAk-DD-NSI" firstAttribute="centerX" secondItem="RJz-ab-nPb" secondAttribute="centerX" id="2BU-tS-Gvm"/>
                             <constraint firstItem="60V-2c-aOb" firstAttribute="bottom" secondItem="na7-jw-8XV" secondAttribute="bottom" id="JVH-5J-X3H"/>
                             <constraint firstItem="60V-2c-aOb" firstAttribute="top" secondItem="orE-KE-GJN" secondAttribute="bottom" constant="20" id="L6D-G1-Ycx"/>
-                            <constraint firstItem="PAk-DD-NSI" firstAttribute="trailing" secondItem="na7-jw-8XV" secondAttribute="trailing" id="Lzd-QS-ft1"/>
                             <constraint firstItem="orE-KE-GJN" firstAttribute="trailing" secondItem="M5y-2n-pJS" secondAttribute="trailing" id="PWA-Ou-3nL"/>
                             <constraint firstItem="60V-2c-aOb" firstAttribute="leading" secondItem="na7-jw-8XV" secondAttribute="leading" constant="20" id="V1F-Vm-3SW"/>
                             <constraint firstItem="M5y-2n-pJS" firstAttribute="top" secondItem="RJz-ab-nPb" secondAttribute="bottom" constant="12" id="WuG-7J-8XU"/>
                             <constraint firstItem="orE-KE-GJN" firstAttribute="leading" secondItem="M5y-2n-pJS" secondAttribute="leading" id="Y7P-l8-uS7"/>
-                            <constraint firstItem="PAk-DD-NSI" firstAttribute="leading" secondItem="na7-jw-8XV" secondAttribute="leading" id="dYc-hx-FVN"/>
+                            <constraint firstItem="PAk-DD-NSI" firstAttribute="top" secondItem="na7-jw-8XV" secondAttribute="top" id="ar2-gn-Meb"/>
                             <constraint firstItem="RJz-ab-nPb" firstAttribute="leading" secondItem="na7-jw-8XV" secondAttribute="leading" constant="20" id="eiG-yo-eR9"/>
                             <constraint firstItem="60V-2c-aOb" firstAttribute="top" secondItem="ajt-XA-FTG" secondAttribute="top" constant="778" id="jKv-2U-E84"/>
                             <constraint firstItem="na7-jw-8XV" firstAttribute="trailing" secondItem="60V-2c-aOb" secondAttribute="trailing" constant="20" id="mYX-uK-buk"/>
                             <constraint firstItem="orE-KE-GJN" firstAttribute="top" secondItem="M5y-2n-pJS" secondAttribute="bottom" constant="12" id="r5N-qg-Pi2"/>
-                            <constraint firstItem="PAk-DD-NSI" firstAttribute="top" secondItem="na7-jw-8XV" secondAttribute="top" id="rrK-NY-hCN"/>
                             <constraint firstItem="M5y-2n-pJS" firstAttribute="trailing" secondItem="RJz-ab-nPb" secondAttribute="trailing" id="sTE-oQ-gPO"/>
                             <constraint firstItem="M5y-2n-pJS" firstAttribute="leading" secondItem="RJz-ab-nPb" secondAttribute="leading" id="sYx-0a-HGU"/>
+                            <constraint firstItem="PAk-DD-NSI" firstAttribute="leading" secondItem="na7-jw-8XV" secondAttribute="leading" id="u7l-LJ-jYu"/>
                             <constraint firstItem="na7-jw-8XV" firstAttribute="trailing" secondItem="RJz-ab-nPb" secondAttribute="trailing" constant="20" id="uaB-tC-ra1"/>
                         </constraints>
                     </view>
